--- a/src/pages/Vans/vans.css
+++ b/src/pages/Vans/vans.css
@@ -26,10 +26,11 @@
     cursor: pointer;
 }
 
-.filter-options a {
+.clear-filter {
     font-size: 0.8rem;
     color: #4D4D4D;
     font-weight: 500;
+    text-decoration: underline;
 }
 
 .van-container {
@@ -66,6 +67,11 @@
     color: #fff;
     font-size: 1rem;
     font-weight: 600;
+}
+
+a {
+    text-decoration: none;
+    color: #161616;
 }
 
 @media (min-width: 576px) {
